<resources>
    <string name="app_name">Home Control</string>
    <string name="setting">Setting</string>
    <string name="add_page">Add Room</string>
    <string name="del_page">Delete Room</string>
    <string name="ren_page">Rename Room</string>
    <string name="tbl_add_button">Add Button</string>
    <string name="tbl_add_exist_btn">Add exist element</string>
    <string name="tbl_add_sensor">Add Sensor</string>
    <string name="tbl_setting">Settings</string>
    <string name="btn_item_Del">Delete</string>
    <string name="msg_rename">Rename</string>
    <string name="msg_choose_exist_element">Choose existing element</string>
    <string name="defaultPageName">Room</string>
    <string name="cancel">Cancel</string>
    <string name="pref_remIP">Remote IP</string>
    <string name="checkboxitem">Note for WiFi</string>
    <string name="activitySetting_name">Program Setting</string>
    <string name="screen_settings">Screen setting</string>
    <string name="network_setting">Network Setting</string>
    <string name="connected">Connected</string>
    <string name="no_net">No network</string>
    <string name="typ_WiFi">WiFi</string>
    <string name="typ_Mobile">Mobile</string>
    <string name="set_dev_num">Set Device number</string>
    <string name="set_cmd_num">Set Command</string>
    <string name="set_outmask">Set Out mask</string>
    <string name="set_last_change">Set Last Change</string>
    <string name="sns_set_num">Set Number</string>
    <string name="sns_update">Update sensors</string>
    <string name="sns_is_Temp">Temperature sensor</string>
    <string name="sns_is_Hum">Humidity sensor</string>
    <string name="sns_is_Press">Pressure Sensor</string>
    <string name="Rows_count">Rows count</string>
    <string name="Columns_count">Columns count</string>
    <string name="Portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="theme_choice">Theme choice</string>
    <string name="pass">Password</string>
    <string name="no_answer">No Answer from device</string>
    <string name="connecting_local">Connecting local…</string>
    <string name="connecting_rem">Connecting remote…</string>
    <string name="noIP">No answer IP</string>
    <string name="upd_link">Update Link</string>
    <string name="sensor">Sensor</string>
    <string name="button">Button</string>
    <string name="device">Device</string>
    <string name="no_exist_elms">No Existing control elements</string>
    <string name="no_temp_sns">No temperature sensors</string>
    <string name="enter_cmd">Enter command</string>
    <string name="no_pr_sns">No pressure sensors</string>
    <string name="no_hum_sns">No humidity sensors</string>
    <string name="no_connect">No connect</string>
    <string name="lightgroup">LightGroup</string>
    <string name="screen_size_settings">Size_setting</string>
    <string name="files_paths">Files paths</string>
    <string name="for_device">for device</string>
    <string name="dev_not_assigned">(device not assigned)</string>
    <string name="unknown">Unknown</string>
    <string name="sensor_choice">Get sensor</string>
    <string name="no_sensor">No sensor</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="msg_statistic">Statistic</string>
    <string name="time">Time</string>
    <string name="period">Counting period</string>
    <string name="min_graph">Graph minimum</string>
    <string name="max_graph">Graph maximum</string>
    <string name="timeout">Short timeout, mS</string>
    <string name="buttons">Buttons</string>
    <string name="padding">Paddings</string>
    <string name="port">Remote Port</string>
    <string name="checkNAT">Check NAT type</string>
    <string name="Start">Start</string>
    <string name="cb_StaticIPtext">Static IP</string>
    <string name="signalIPtext">Signal server IP</string>
    <string name="no_sns">no sensor</string>
    <string name="serial">Device serial number</string>
    <string name="no_serial">No device serial number</string>
    <string name="not_set_signal_IP">Signal Server IP not set</string>
    <string name="no_signal_IP">Signal server inaccessible</string>
    <string name="no_host_at_signal_IP">not found in signal server</string>
    <string name="no_remIP">Remote address or port not set</string>
    <string name="no_stun">Stun server not avaiable</string>
    <string name="getnames">Get Light Names from </string>
    <string name="getcmds">Get commands from device</string>
    <string name="no_licon_data">Project not loaded</string>
    <string name="licon_data_got">Data received</string>
    <string name="Zone">Zone</string>
    <string name="Scene">Scene</string>
    <string name="Scene_OFF">Scene OFF</string>
    <string name="Get_Scene">Get Scene</string>
    <string name="Triggering">Triggering</string>
    <string name="Out">Out</string>
    <string name="oON">ON</string>
    <string name="oOFF">OFF</string>
    <string name="oFrom">from</string>
    <string name="oNow">now</string>
    <string name="sec">sec</string>
    <string name="get_cmd">Get command</string>
    <string name="Module">Module</string>
    <string name="Success">Success</string>
    <string name="error">Error</string>
    <string name="need_restart">To apply the changes you need to restart the application</string>
    <string name="write_permit">Write External Storage permission \nis necessary to save settings \nin case of deletion of the application \nand then be able to restore them</string>
    <string name="found_settings">Previous Settings found \nRestore it?</string>
    <string name="no_pass_set">No pass set</string>
    <string name="canRotate">Allow rotate screen</string>
    <string name="showLog">Show Log</string>
    <string name="ok">OK</string>
    <string name="count">Data count</string>
    <string name="days">d</string>
    <string name="hours">h</string>
    <string name="secs">s</string>
    <string name="cursor">Cursor</string>
    <string name="scale">Scale</string>
    <string name="setNewPass">Set new Pass</string>
    <string name="setNewSerial">Set new serial</string>
    <string name="noPassEnt">No Pass</string>
    <string name="titleNewPass">New Pass (max 6 digits)</string>
    <string name="changed_group">Changed Group</string>
    <string name="set_name">Set name</string>
    <string name="get_room">Get room</string>
    <string name="anderstend">It\'s clear</string>
    <string name="ban">disallow</string>
    <string name="lightOn">Light is ON</string>
    <string name="lightOff">Light is OFF</string>
    <string name="annotation_learn">Shown here are the groups of lights that changed their state when they were last switched. By acting on the wall switches, you can identify each of the groups and give it a name.</string>
    <string name="learning">Identify of lightgroups</string>
    <string name="close">Close</string>
    <string name="noteLoad">It is recommended to download a list of commands from devices</string>
    <string name="noteLoadpart">The list of commands is not fully loaded. \nrepeat?</string>
    <string name="repeatCount">Link attempts count</string>
    <string name="longtimeout">Long TimeOut, mS</string>
    <string name="load">Load</string>
    <string name="repeat">Repeat</string>
    <string name="attention">Attention</string>
    <string name="noteNotLoad">Failed to load command list. \nrepeat?</string>
    <string name="room_zone">Room zone</string>
    <string name="lamp">Lamp</string>
    <string name="enter_command_number">Enter command number</string>
    <string name="select">Select</string>
    <string name="dot">.</string>
    <string name="copy_current_serial">Copy current serial</string>
    <string name="device_serial">Device serial</string>
    <string name="exit">Exit</string>
</resources>
