<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_room"
        android:orderInCategory="1"
        android:title="@string/add_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ren_room"
        android:orderInCategory="2"
        android:title="@string/ren_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_del_room"
        android:orderInCategory="3"
        android:title="@string/del_page"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_update"
        android:orderInCategory="4"
        android:title="@string/upd_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="5"
        android:title="@string/setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_GetNames"
        android:orderInCategory="6"
        android:title="@string/getnames"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_GetCommands"
        android:orderInCategory="7"
        android:title="@string/getcmds"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ShowLog"
        android:orderInCategory="8"
        android:title="@string/showLog"
        app:showAsAction="never" />

</menu>