<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/last_change_dlg">

     <TextView
         android:id="@+id/cmdN_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/set_cmd_num"
         android:textAlignment="center"
         android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cmdN_edit"
        android:text="cmdN_edit"
        android:inputType="number"
        android:layout_weight="1"/>

     <TextView
         android:id="@+id/devN_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/set_dev_num"
         android:textAlignment="center"
         android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/devN_edit"
        android:text="devN_edit"
        android:inputType="number"
        android:layout_weight="1"/>

     <TextView
         android:id="@+id/mask_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/set_outmask"
         android:textAlignment="center"
         android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mask_edit"
        android:text="cmdN_edit"
        android:inputType="number"
        android:layout_weight="1"/>

</LinearLayout>